Fixes border on checkout page, margin/spacing.

--- a/resources/stylesheets/src/main.scss
+++ b/resources/stylesheets/src/main.scss
@@ -170,10 +170,9 @@ nav {
 #delivery-billing-info {
 	@include outer-container;
 	.billing-summary {
-		@include span-columns(7);
-    border-right: 1px solid #000;
-    padding-right: 40px;
-    margin-right: flex-gutter(7);
+		@include span-columns(8);
+    border-right: 1px solid $grey;
+    padding-right: percentage(1/24);
 		#billing-form {
 			@include span-columns(6 of 7);
 			input,textarea,select {
@@ -259,6 +258,7 @@ nav {
 	}
 	.order-summary {
 		@include span-columns(4);
+    padding-left: percentage(1/24);
 	}
 }
 
